--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 <body>
     Body de nuestra pagina web
     hola mundo como estas?
+    todo bien y tu gracias 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates dolores numquam nemo magnam iusto ullam est unde dolorum, ea amet suscipit pariatur architecto rem, soluta in impedit doloribus modi. Delectus!</p>
 </body>
 </html>
