la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
     <title>miprimerpaginaweb</title>
 </head>
 <!-- Representa todo el contenido de la pagina web -->
 <body>
-    Body de nuestra pagina web
-    hola mundo como estas?
-    todo bien y tu gracias 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates dolores numquam nemo magnam iusto ullam est unde dolorum, ea amet suscipit pariatur architecto rem, soluta in impedit doloribus modi. Delectus!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam vitae commodi dicta architecto porro consequatur. Eos repellendus hic saepe optio, sequi, sunt necessitatibus voluptas asperiores enim repudiandae, suscipit velit iure?</p>
+ <header>
+    <nav>
+        <ul>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
+ </header> 
+
+<section>
+    <h1></h1>
+    <img src="" alt="">
+    <p></p>
+</section>
+
+<footer>
+    <i></i>
+    <a href=""></a>
+    <img src="" alt="">
+</footer>
+
+
+
 </body>
 </html>
