--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <!-- Representa todo el contenido de la pagina web -->
 <body>
- <header>
+ <header class="genio">
     <nav>
         <ul>
             <li><a href=""></a></li>
@@ -21,7 +21,7 @@
     </nav>
  </header> 
 
-<section>
+<section class="genio" >
     <h1></h1>
     <img src="" alt="">
     <p></p>
