la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
 <!-- Representa todo el contenido de la pagina web -->
 <body>
  <header class="genio">
+    <h1>Esta es la cebezera</h1>
     <nav>
         <ul>
-            <li><a href=""></a></li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Acerca de</a></li>
+            <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
  </header> 
 
 <section class="genio" >
-    <h1></h1>
+    <h1>Esta es la seccion</h1>
     <img src="" alt="">
-    <p></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur reprehenderit culpa aperiam, fuga harum provident vero consequuntur ipsa, illum cupiditate, praesentium vel dolorem amet repudiandae tenetur delectus sit sunt modi!</p>
 </section>
 
 <footer>
+    <h1>Este es el pie de pagina</h1>
     <i></i>
-    <a href=""></a>
-    <img src="" alt="">
+    <a href="#">Jose Chamorro</a>
+    <img src="http://placekitten.com/800/250" alt="<div class="content">
 </footer>
 
 
