la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 </head>
 <!-- Representa todo el contenido de la pagina web -->
 <body>
+ <!-- Etiquetas son <header><section><footer> -->   
  <header class="genio">
     <h1>Esta es la cebezera</h1>
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de</a></li>
+            <li><a href="#">Novelas</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
@@ -26,8 +27,18 @@
 
 <section class="genio" >
     <h1>Esta es la seccion</h1>
-    <img src="" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur reprehenderit culpa aperiam, fuga harum provident vero consequuntur ipsa, illum cupiditate, praesentium vel dolorem amet repudiandae tenetur delectus sit sunt modi!</p>
+    <img src="http://placekitten.com/800/255" alt="<div class="content">
+    <h1>Harry Potter</h1>
+    <h2>Sinopsis</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse error architecto asperiores amet dolores ea ut cupiditate quos, quasi optio repellat itaque voluptates exercitationem perferendis nesciunt aliquid dicta modi ad?</p>
+    <h2>Novelas</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel officiis eligendi cumque labore saepe corporis ullam ducimus voluptatibus consequuntur quas provident non, placeat doloremque sint perspiciatis neque iste id.</p>
+    <h3>Harry Poter y la Piedra Filosofal</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, dolores eius perspiciatis ea ipsam quasi iste delectus dolore recusandae accusantium, dignissimos placeat rerum numquam blanditiis fugiat! Facere quam animi fuga!</p>
+    <h4>Personajes</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam molestias a aut doloremque laudantium exercitationem, reprehenderit impedit ad nihil, harum beatae quidem consequuntur quos adipisci cum? Alias quo veniam eligendi.</p>
+    <h4>final</h4>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt quidem quasi voluptatem pariatur praesentium, laudantium, distinctio possimus quod animi laboriosam rem perspiciatis quisquam maiores modi corrupti quae. Sit, omnis!</p>
 </section>
 
 <footer>
@@ -35,6 +46,7 @@
     <i></i>
     <a href="#">Jose Chamorro</a>
     <img src="http://placekitten.com/800/250" alt="<div class="content">
+    <h2>2023</h2>    
 </footer>
 
 
