la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
         </ul>
     </nav>
  </header> 
-
+<main>
 <section class="genio" >
     <h1>Esta es la seccion</h1>
-    <img src="http://placekitten.com/800/255" alt="<div class="content">
-    <h1>Harry Potter</h1>
-    <h2>Sinopsis</h2>
+    <img src="http://placekitten.com/800/255" alt="">
+    <h2>Harry Potter</h2>
+    <h3>Sinopsis</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse error architecto asperiores amet dolores ea ut cupiditate quos, quasi optio repellat itaque voluptates exercitationem perferendis nesciunt aliquid dicta modi ad?</p>
-    <h2>Novelas</h2>
+    <h4>Novelas</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel officiis eligendi cumque labore saepe corporis ullam ducimus voluptatibus consequuntur quas provident non, placeat doloremque sint perspiciatis neque iste id.</p>
-    <h3>Harry Poter y la Piedra Filosofal</h3>
+    <h5>Harry Poter y la Piedra Filosofal</h5>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, dolores eius perspiciatis ea ipsam quasi iste delectus dolore recusandae accusantium, dignissimos placeat rerum numquam blanditiis fugiat! Facere quam animi fuga!</p>
-    <h4>Personajes</h4>
+    <h6>Personajes</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam molestias a aut doloremque laudantium exercitationem, reprehenderit impedit ad nihil, harum beatae quidem consequuntur quos adipisci cum? Alias quo veniam eligendi.</p>
-    <h4>final</h4>
+    <h6>final</h6>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt quidem quasi voluptatem pariatur praesentium, laudantium, distinctio possimus quod animi laboriosam rem perspiciatis quisquam maiores modi corrupti quae. Sit, omnis!</p>
 </section>
-
+</main>
 <footer>
-    <h1>Este es el pie de pagina</h1>
+    <h2>Este es el pie de pagina</h2>
     <i></i>
     <a href="#">Jose Chamorro</a>
-    <img src="http://placekitten.com/800/250" alt="<div class="content">
+    <img src="http://placekitten.com/800/250" alt="">
     <h2>2023</h2>    
 </footer>
 
