la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <img src="http://placekitten.com/800/255" alt="">
     <h2>Harry Potter</h2>
     <h3>Sinopsis</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse error architecto asperiores amet dolores ea ut cupiditate quos, quasi optio repellat itaque voluptates exercitationem perferendis nesciunt aliquid dicta modi ad?</p>
+    <p>Lorem ipsum, dolor sit amet <em>consectetur adipisicing </em>elit. Esse error architecto asperiores amet <strong>dolores ea ut cupiditate quos</strong>, quasi optio repellat itaque voluptates exercitationem perferendis nesciunt aliquid dicta modi ad?</p>
     <h4>Novelas</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel officiis eligendi cumque labore saepe corporis ullam ducimus voluptatibus consequuntur quas provident non, placeat doloremque sint perspiciatis neque iste id.</p>
     <h5>Harry Poter y la Piedra Filosofal</h5>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, dolores eius perspiciatis ea ipsam quasi iste delectus dolore recusandae accusantium, dignissimos placeat rerum numquam blanditiis fugiat! Facere quam animi fuga!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Est, dolores eius perspiciatis ea ipsam quasi iste delectus dolore recusandae accusantium, dignissimos placeat rerum numquam blanditiis fugiat! Facere quam animi fuga!</p>
+    <p><small>saludos</small></p>
     <h6>Personajes</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam molestias a aut doloremque laudantium exercitationem, reprehenderit impedit ad nihil, harum beatae quidem consequuntur quos adipisci cum? Alias quo veniam eligendi.</p>
     <h6>final</h6>
@@ -46,7 +47,7 @@
     <i></i>
     <a href="#">Jose Chamorro</a>
     <img src="http://placekitten.com/800/250" alt="">
-    <h2>2023</h2>    
+    <p><time>16/01/2023</time></p>  
 </footer>
 
 
