la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <i></i>
     <a href="#">Jose Chamorro</a>
     <img src="http://placekitten.com/800/250" alt="">
-    <p><time>16/01/2023</time></p>  
+    <time>2023</time>
 </footer>
 
 
