la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt quidem quasi voluptatem pariatur praesentium, laudantium, distinctio possimus quod animi laboriosam rem perspiciatis quisquam maiores modi corrupti quae. Sit, omnis!</p>
 </section>
 </main>
-<footer>
+<footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
     <i></i>
     <a href="#">Jose Chamorro</a>
