la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Novelas</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
  </header> 
