la etiqueta de lo que guardo

--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,12 @@
     <h1>Jose Chamorro</h1>
     <h2>mail= gabriel</h2>
     <h2>Developer FrontEnd </h2>
-    
+    <nav>
+        <ul>
+         <li>
+            <a href="index.html">Volver al Inicio</a>
+         </li>   
+        </ul>
+    </nav>
 </body>
 </html>
