--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Esta es la cebezera</h1>
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
+            <li><a href="https://google.com">Ir a google</a></li>
             <li><a href="#">Novelas</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
