la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <img src="http://placekitten.com/800/255" alt="">
     <h2>Harry Potter</h2>
     <h3>Sinopsis</h3>
-    <p>Lorem ipsum, dolor sit amet <em>consectetur adipisicing </em>elit. Esse error architecto asperiores amet <strong>dolores ea ut cupiditate quos</strong>, quasi optio repellat itaque voluptates exercitationem perferendis nesciunt aliquid dicta modi ad?</p>
+    <p> La historia comienza con la celebración del mundo.los magos habían vivido aterrorizados por el malvado  mago.  El cuerpo de Voldemort resulta destruido,<b>pero él sobrevive: se convierte en algo más sutil que un fantasma</b> </p>
     <h4>Novelas</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel officiis eligendi cumque labore saepe corporis ullam ducimus voluptatibus consequuntur quas provident non, placeat doloremque sint perspiciatis neque iste id.</p>
+    <p>El cuerpo de Voldemort resulta destruido, pero él sobrevive: se convierte en algo más sutil que un fantasma, según sus propias palabras, que no está ni muerto ni vivo. Por su parte, a Harry solo le queda una cicatriz con forma de rayo en la frente que es el único remanente físico de la maldición de Voldemort. </p>
     <h5>Harry Poter y la Piedra Filosofal</h5>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Est, dolores eius perspiciatis ea ipsam quasi iste delectus dolore recusandae accusantium, dignissimos placeat rerum numquam blanditiis fugiat! Facere quam animi fuga!</p>
+    <p> Aparte de la cicatriz, a Harry le queda una extraña conexión cerebral con Voldemort, la cual hace que Harry pueda sentir las emociones de Voldemort y hable parsel, el idioma de las serpientes.<br>Harry es el único sobreviviente de la maldición asesina </p>
     <p><small>saludos</small></p>
     <h6>Personajes</h6>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam molestias a aut doloremque laudantium exercitationem, reprehenderit impedit ad nihil, harum beatae quidem consequuntur quos adipisci cum? Alias quo veniam eligendi.</p>
+    <p>Aparte de la cicatriz, a Harry le queda una extraña conexión cerebral con Voldemort</p>
     <h6>final</h6>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt quidem quasi voluptatem pariatur praesentium, laudantium, distinctio possimus quod animi laboriosam rem perspiciatis quisquam maiores modi corrupti quae. Sit, omnis!</p>
+    <p>Harry es el único sobreviviente de la maldición asesina, y a raíz de la misteriosa derrota de Voldemort</p>
 </section>
 </main>
 <footer class="parrafo-2" >
