la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h1>Esta es la cebezera</h1>
     <nav>
         <ul>
-            <li><a href="https://google.com">Ir a google</a></li>
-            <li><a href="#">Novelas</a></li>
+            <li><a href="https://google.com" target="_blank">Ir a google</a></li>
+            <li><a href="/imagen.jpeg"download>Descarga</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
