la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li><a href="https://google.com" target="_blank">Ir a google</a></li>
-            <li><a href="/imagen.jpeg"download>Descarga</a></li>
+            <li><a href="/imagen.jpeg" download>Descarga</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
@@ -40,7 +40,60 @@
     <p>Aparte de la cicatriz, a Harry le queda una extraña conexión cerebral con Voldemort</p>
     <h6>final</h6>
     <p>Harry es el único sobreviviente de la maldición asesina, y a raíz de la misteriosa derrota de Voldemort</p>
-</section>
+    </section>
+    <h6>Tablas</h6>
+    <table>
+        <caption>HORARIO</caption>
+        <colgroup>
+             <col>
+             <col>
+             <col>
+             <col>
+             <col>
+             <col>
+        </colgroup>
+        <thead>
+            <tr>
+                <th></th>
+                <th>L</th>
+                <th>M</th>
+                <th>X</th>
+                <th>J</th>
+                <th>V</th>
+            </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>8:30 - 9:30</td>
+            <td>Lengua</td>
+            <td>Matematicas</td>
+            <td>Sociales</td>
+            <td>Matematicas</td>
+            <td>Matematicas</td>
+        </tr>
+        <tr>
+            <td>9:30 - 10:25</td>
+            <td rowspan="2">Matematicas</td>
+            <td>Lengua</td>
+            <td>Matematicas</td>
+            <td>Ciencia</td>
+            <td>Lengua</td>
+        </tr>
+        <tr>
+            <td>10:25 - 11:20</td>
+            <td>Ciencia</td>
+            <td>Lengua</td>
+            <td>Lengua</td>
+            <td>Ed fisica</td>  
+        </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="5"> Total de asignaturas</td>
+                <td>6</td>
+            </tr>
+        </tfoot>
+    </table>
 </main>
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
