la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
     <h6>Personajes</h6>
     <p>Aparte de la cicatriz, a Harry le queda una extraña conexión cerebral con Voldemort</p>
     <h6>final</h6>
-    <p>Harry es el único sobreviviente de la maldición asesina, y a raíz de la misteriosa derrota de Voldemort</p>
+    <p> Harry es el único sobreviviente de la maldición asesina, y a raíz de la misteriosa derrota de Voldemort</p>
     </section>
+    <div>
+     <p>
+     <span>Fin de la novela</span> 
+     </p>   
+    </div>
     <h6>Tablas</h6>
     <table>
         <caption>HORARIO</caption>
@@ -97,9 +102,18 @@
 </main>
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
-    <i></i>
-    <a href="#">Jose Chamorro</a>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzF20gSWP8bKvk_qvNQXdVktuVmlB508BESEX5KWAnWfUQWabX4R626CCeuFmN1Xg1q7w&usqp=CAU" alt="">
+    <form action="">
+        <label for="">Inscribirse</label>
+        <input type="text">
+        <button>Enviar mail</button>
+    </form>
+    <address>
+        Jose Chamorro <br>
+        mail: gabrielchamo@hotmailcom <br>
+        Argentina <br>
+    </address>
+    
+    
     <time>2023</time>
 </footer>
 
