la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 </main>
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
-    <form action="">
-        <label for="">Inscribirse</label>
-        <input type="text">
+    <form>
+        <label for="name">Nombre</label>
+        <input id="name">
         <button>Enviar mail</button>
     </form>
     <address>
