la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -107,6 +107,46 @@
         <input id="name">
         <button>Enviar mail</button>
     </form>
+    <form>
+        <input type="date">
+        <input type="time">
+    </form>
+    <div>
+    <label> search
+        <input type="search">
+    </label>
+    </div>
+    <div>
+    <label> telefono
+        <input type="tel">
+    </label>
+    </div>
+    <div>
+    <label> email
+        <input type="email">
+    </label>
+    </div>
+    <div>
+    <label> password
+        <input type="password">
+    </label>
+    </div>
+    <div>
+    <label> url
+        <input type="url">
+    </label>
+    </div>
+    <form>
+        <label> Masculino
+            <input type="radio" name="gender" value="Masculino">
+        </label>
+        <label> Femenino
+            <input type="radio" name="gender" value="Femenino">
+        </label>
+        <label> Desconocido
+            <input type="radio" name="gender" value="Desconocido">
+        </label>
+    </form>
     <address>
         Jose Chamorro <br>
         mail: gabrielchamo@hotmailcom <br>
