la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
         <label> Desconocido
             <input type="radio" name="gender" value="Desconocido">
         </label>
+        <div>
+        <label> HTML
+            <input type="checkbox">
+        </label>  
+        <label> CSS
+            <input type="checkbox">
+        </label> 
+        <label> JavaScript
+            <input type="checkbox">
+        </label> 
+        </div>
     </form>
     <address>
         Jose Chamorro <br>
