la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -148,14 +148,21 @@
         </label>
         <div>
         <label> HTML
-            <input type="checkbox">
+            <input type="checkbox" name="languages" value="html">
         </label>  
         <label> CSS
-            <input type="checkbox">
+            <input type="checkbox" name="languages" value="css">
         </label> 
         <label> JavaScript
-            <input type="checkbox">
+            <input type="checkbox" name="languages" value="JavaScript">
         </label> 
+        </div>
+        <div>
+            <select name="lenguajes">
+                <option value="html">HTML</option>
+                <option value="css">CSS</option>
+                <option value="JavaScript">JavaScript</option>
+            </select>
         </div>
     </form>
     <address>
