la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
     <form>
+        <fieldset>
+         <legend>Datos Personales</legend>   
         <label for="name">Nombre</label>
         <input id="name">
         <button>Enviar mail</button>
+        </fieldset>
     </form>
     <form>
         <input type="date">
@@ -164,6 +167,10 @@
                 <option value="JavaScript">JavaScript</option>
             </select>
         </div>
+    </form>
+    <form>
+        <label for="message"> Mensaje</label>
+        <textarea name="" id="message" cols="30" rows="10"></textarea>
     </form>
     <address>
         Jose Chamorro <br>
