la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -107,13 +107,8 @@
          <legend>Datos Personales</legend>   
         <label for="name">Nombre</label>
         <input id="name">
-        <button>Enviar mail</button>
-        </fieldset>
-    </form>
-    <form>
         <input type="date">
         <input type="time">
-    </form>
     <div>
     <label> search
         <input type="search">
@@ -126,7 +121,7 @@
     </div>
     <div>
     <label> email
-        <input type="email">
+        <input type="email" placeholder="campo obligatorio" required>
     </label>
     </div>
     <div>
@@ -139,7 +134,6 @@
         <input type="url">
     </label>
     </div>
-    <form>
         <label> Masculino
             <input type="radio" name="gender" value="Masculino">
         </label>
@@ -167,10 +161,10 @@
                 <option value="JavaScript">JavaScript</option>
             </select>
         </div>
-    </form>
-    <form>
         <label for="message"> Mensaje</label>
-        <textarea name="" id="message" cols="30" rows="10"></textarea>
+        <textarea name="#" id="message" cols="30" rows="10"></textarea>
+        <button>Enviar mail</button>
+        </fieldset>
     </form>
     <address>
         Jose Chamorro <br>
