la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 </main>
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
-    <form>
+    <form action="#" method="post">
         <fieldset>
          <legend>Datos Personales</legend>   
         <label for="name">Nombre</label>
-        <input id="name">
+        <input id="name" name="name">
         <input type="date">
         <input type="time">
     <div>
