--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </main>
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
-    <form action="#" method="post">
+    <form action="#" class="formulario" id="formulario">
         <fieldset>
          <legend>Datos Personales</legend>   
         <label for="name">Nombre</label>
@@ -171,7 +171,7 @@
         mail: gabrielchamo@hotmailcom <br>
         Argentina <br>
     </address>
-    
+    <script src="formulario.js"></script>
     
     <time>2023</time>
 </footer>
