la etiqueta de lo que guardo

--- a/formulario.html/formula.html
+++ b/formulario.html/formula.html
@@ -8,6 +8,12 @@
     <title>Mi Formulario</title> 
 </head>
 <body>
-    <h1>Gracias por tu cometario</h1>
+    <form action="procesar.php" method="POST">
+    <label for="name">Nombre</label>
+    <input id="name" type="text" name="nombre"><br>
+    <label for="email">Email</label>
+    <input id= "email" type="text" name="email"><br>
+     <button>Submit</button>
+    </form>
 </body>
 </html>
