la etiqueta de lo que guardo

--- a/formulario.html/formula.html
+++ b/formulario.html/formula.html
@@ -8,10 +8,10 @@
     <title>Mi Formulario</title> 
 </head>
 <body>
-    <form action="procesar.php" method="POST">
-    <label for="name">Nombre</label>
+    <form action="procesar(1).php" method="POST">
+    <label for="name">nombre</label>
     <input id="name" type="text" name="nombre"><br>
-    <label for="email">Email</label>
+    <label for="email">email</label>
     <input id= "email" type="text" name="email"><br>
      <button>Submit</button>
     </form>
