la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </main>
 <footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
-    <form action="form.php" method="post">
+    <form action="https://formsubmit.co/gabriel_influencia74@hotmail.com" method="post">
         <fieldset>
          <legend>Datos Personales</legend>   
         <label for="name">Nombre</label>
@@ -148,7 +148,7 @@
         </div>
         <label for="message"> Mensaje</label>
         <textarea name="#" id="message" cols="30" rows="10"></textarea>
-        <button>Enviar mail</button>
+        <button type="submit">Send</button>
         </fieldset>
     </form>
     <address>
