la etiqueta de lo que guardo

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </tfoot>
     </table>
 </main>
-<footer class="parrafo-2" class="genio">
+<footer class="parrafo-2" >
     <h2>Este es el pie de pagina</h2>
     <form action="https://formsubmit.co/gabriel_influencia74@hotmail.com" method="post">
         <fieldset>
