--- a/formulario.html
+++ b/formulario.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+		<h1>Inscripcion</h1>
 		<form action="https://formsubmit.co/gabriel_influencia74@hotmail.com" method="post" class="formulario" id="formulario">
 			
 			<!-- Grupo: Nombre -->
